welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:39: error: not enough arguments for method coloriage: (T: Array[java.awt.Color], decal: Int)Unit.
Unspecified value parameter decal.
    coloriage(tableau)
             ^